Feature #2224 : Apply virtual thread (#2335)
* Apply virtual thread

* Apply reviews

* Apply reviews

* Refactor tests to use SLF4J for logging instead of System.out

---------

Co-authored-by: kanghyun.yang <kanghyun.yang@linecorp.com>