@@ -22,6 +22,8 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.atomic.AtomicInteger;
 
+import io.github.resilience4j.core.ExecutorServiceFactory;
+
 /**
  * Creates threads using "$name-%d" pattern for naming. Is based on {@link Executors#defaultThreadFactory}
  */
@@ -36,20 +38,31 @@ public class NamingThreadFactory implements ThreadFactory {
         this.prefix = String.join("-",name, "");
     }
 
+    /**
+     * Returns the ThreadGroup to use for newly created threads.
+     *
+     * Historically this consulted {@link System#getSecurityManager()}, but the
+     * SecurityManager API is deprecated for removal as of JDK 17.  All modern
+     * applications run without a custom SecurityManager, so we now simply return
+     * the current thread's group.
+     */
     private ThreadGroup getThreadGroup() {
-        SecurityManager security = System.getSecurityManager();
-        return security != null ? security.getThreadGroup()
-            : Thread.currentThread().getThreadGroup();
+        return Thread.currentThread().getThreadGroup();
     }
 
     @Override
     public Thread newThread(Runnable runnable) {
-        Thread thread = new Thread(group, runnable, createName(), 0);
-        if (thread.isDaemon()) {
-            thread.setDaemon(false);
-        }
-        if (thread.getPriority() != Thread.NORM_PRIORITY) {
-            thread.setPriority(Thread.NORM_PRIORITY);
+        String name = createName();
+        Thread thread = ExecutorServiceFactory.getThreadType() == ThreadType.VIRTUAL
+            ? Thread.ofVirtual().name(name, 0).unstarted(runnable)
+            : new Thread(group, runnable, name, 0);
+        if (!thread.isVirtual()) {
+            if (thread.isDaemon()) {
+                thread.setDaemon(false);
+            }
+            if (thread.getPriority() != Thread.NORM_PRIORITY) {
+                thread.setPriority(Thread.NORM_PRIORITY);
+            }
         }
         return thread;
     }
